# shattr

./: CMakeLists.txt  README.md  main.c  sha256-x8664.S  sha256.c  sha256.h
.github/workflows/: cmake.yml
